@@ -31,6 +31,7 @@ Configure in ``settings.py`` or a ``.conf`` file in ``/etc/synnefo`` if using sn
 Name                             Default value                                                      Description
 ===============================  ================================================================   ============================================================
 ASTAKOS_URL                      \https://<astakos.host>/                                           Astakos Authentication URL
+PITHOS_ASTAKOSCLIENT_POOLSIZE    200                                                                The size of the http pool for the astakos client
 PITHOS_ASTAKOS_COOKIE_NAME       _pithos2_a                                                         Cookie name to retrieve fallback token
 PITHOS_BACKEND_DB_MODULE         pithos.backends.lib.sqlalchemy
 PITHOS_BACKEND_DB_CONNECTION     sqlite:////tmp/pithos-backend.db                                   SQLAlchemy database connection string
@@ -55,9 +56,6 @@ PITHOS_PROXY_USER_SERVICES       True                                           
 PITHOS_USER_CATALOG_URL          \https://<astakos.host>/user_catalogs/                             Astakos User Catalog URL
 PITHOS_USER_FEEDBACK_URL         \https://<astakos.host>/feedback/                                  Astakos User Feedback URL
 PITHOS_USER_LOGIN_URL            \https://<astakos.host>/login/                                     Astakos User Login URL
-PITHOS_USE_QUOTAHOLDER           True                                                               Enable quotaholder
-PITHOS_QUOTAHOLDER_URL           ''                                                                 Quotaholder URL
-PITHOS_QUOTAHOLDER_TOKEN         ''                                                                 Quotaholder token
 PITHOS_PUBLIC_URL_SECURITY       16                                                                 How many random bytes to use for constructing the URL of Pithos public files
 PITHOS_PUBLIC_URL_ALPHABET       '0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'   The alphabet to use for constructing the URL of Pithos public files
 ===============================  ================================================================   ============================================================
