@@ -45,17 +45,12 @@
 #PITHOS_USER_FEEDBACK_URL = 'https://accounts.example.synnefo.org/feedback/'
 #PITHOS_USER_LOGIN_URL = 'https://accounts.example.synnefo.org/login/'
 
-# Enable and configure quotaholder
-#PITHOS_USE_QUOTAHOLDER = False
-#PITHOS_QUOTAHOLDER_URL = ''
-#PITHOS_QUOTAHOLDER_TOKEN = ''
-#
-# Tune the size of the http pool for the quotaholder client.
+# Tune the size of the http pool for the astakos client.
 # It limits the maximum number of quota changing requests
 # that pithos can serve. Extra requests will be blocked
 # until another has completed.
 #
-#PITHOS_QUOTAHOLDER_POOLSIZE = 200
+#PITHOS_ASTAKOSCLIENT_POOLSIZE = 200
 #
 # How many random bytes to use for constructing the URL of Pithos public files.
 # Lower values mean accidental reuse of (discarded) URLs is more probable.
