@@ -56,8 +56,8 @@ class Command(NoArgsCommand):
     def handle_noargs(self, **options):
         b = get_backend()
         try:
-            pending_commissions = b.quotaholder.get_pending_commissions(
-                token=b.quotaholder_token)
+            pending_commissions = b.astakosclient.get_pending_commissions(
+                token=b.service_token)
 
             if pending_commissions:
                 self.stdout.write(
@@ -68,10 +68,10 @@ class Command(NoArgsCommand):
                 return
 
             if options['fix']:
-                to_accept = b.quotaholder_serials.lookup(pending_commissions)
+                to_accept = b.commision_serials.lookup(pending_commissions)
                 to_reject = list(set(pending_commissions) - set(to_accept))
-                response = b.quotaholder.resolve_commissions(
-                    token=b.quotaholder_token,
+                response = b.astakosclient.resolve_commissions(
+                    token=b.service_token,
                     accept_serials=to_accept,
                     reject_serials=to_reject
                 )
@@ -84,7 +84,7 @@ class Command(NoArgsCommand):
                 for i in failed:
                     self.stdout.write('%s\n' % i)
 
-                b.quotaholder_serials.delete_many(accepted)
+                b.commision_serials.delete_many(accepted)
         except Exception, e:
             logger.exception(e)
             raise CommandError(e)
